# Mem3DG

./: .flake8  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CMakeLists.txt  CMakeSettings.json  Gemfile  MANIFEST.in  README.md  VERSION  _config.yaml  annotated.html  classddgsolver_1_1_force-members.html  classddgsolver_1_1_force.html  classes.html  classmem3dg_1_1_b_f_g_s-members.html  classmem3dg_1_1_b_f_g_s.html  classmem3dg_1_1_conjugate_gradient-members.html  classmem3dg_1_1_conjugate_gradient.html  classmem3dg_1_1_euler-members.html  classmem3dg_1_1_euler.html  classmem3dg_1_1_feed_forward_sweep-members.html  classmem3dg_1_1_feed_forward_sweep.html  classmem3dg_1_1_integrator-members.html  classmem3dg_1_1_integrator.html  classmem3dg_1_1_stormer_verlet-members.html  classmem3dg_1_1_stormer_verlet.html  classmem3dg_1_1_system-members.html  classmem3dg_1_1_system.html  classmem3dg_1_1_velocity_verlet-members.html  classmem3dg_1_1_velocity_verlet.html  constants_8h_source.html  ddgsolver_8h_source.html  dir_799879e6a836950f8eecfa5d7389635a.html  dir_b92bb6a32d79dbb918469bb7fda61201.html  (+65 more)
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: ci.yaml  doc_versioning.yaml
C++/: hello.cpp  hello2.cpp
_data/: tags.yml
_includes/: footer.html  head.html  navbar.html
_layouts/: default.html  splash.html
_pages/: 404.md  tutorials.md
_sass/: custom.scss
_sass/bootstrap/: _variables.scss
admin/: copyright-precommit-check.sh  copyright.py  copyright.sh
assets/css/: main.scss
cmake/: DefaultBuildType.cmake  DefaultBuildTypeAndFlags.cmake  EigenChecker.cmake  FindGperftools.cmake  FindNetCDF.cmake  FindNetCDF_cxx4.cmake  FindSphinx.cmake  FindnetCDF.cmake  Findnetcdf-cxx4.cmake  Findpytest.cmake  GetGitRevisionDescription.cmake  Macros.cmake  VERSION.in  __init__.py.in  version.cpp.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py.in  rtd-requirements.txt
docs/src/: index.rst  pymem3dg.rst
docs/src/_templates/: base.rst  class.rst  module.rst
include/: CMakeLists.txt  ddg_solver.h  mem3dg.h  visualization.h
include/ddgsolver/: constants.h  ddg_solver.h  ddgsolver.h  force.h  icosphere.h  integrator.h  macros.h  meshops.h  trajfile.h  typetraits.h  util.h  version.h
include/mem3dg/: constants.h  error_handler.h  macros.h  mem3dg  mesh_io.h  meshops.h  type_utilities.h  typetraits.h  version.h
libraries/: CMakeLists.txt
libraries/autodiff/: CMakeLists.txt
libraries/netcdf-cxx4/: CMakeLists.txt
libraries/pcg/: CMakeLists.txt
matlab/: spheremesh_denser.m  spheremesh_looser.m
pressure_load_1.2/analytical_area_penalty1.2.2/: testing.py  visualization.py
pyddg/: CMakeLists.txt
pyddg/src/: ddgsolver.cpp  pyddg.cpp
pyddglib/: CMakeLists.txt
pyddglib/src/: pyddg.cpp
pymem3dg/: .gitignore  CMakeLists.txt  __init__.py
pymem3dg/src/: ddgsolver.cpp  mem3dg.cpp  py_variable_physics_system.cpp  pyddg.cpp  pymem3dg.cpp  visualization.cpp
python_src/: CMakeLists.txt  main.cpp  pymem3dg.cpp  pymem3dg_energy.cpp  pymem3dg_forces.cpp  pymem3dg_geometry.cpp  pymem3dg_integrators.cpp  pymem3dg_mutators.cpp  pymem3dg_parameters.cpp  pymem3dg_system.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+34 more)
src/: BFGS.cpp  CMakeLists.txt  all_force.cpp  bending_energy.cpp  bending_force.cpp  conjugateGradient.cpp  conjugate_gradient.cpp  conservative_force.cpp  damping_force.cpp  ddg_solver.cpp  dpd_force.cpp  energy.cpp  euler.cpp  external_force.cpp  force.cpp  helloworld.cpp  icosphere.cpp  init.cpp  integration_io.cpp  integrator.cpp  log_file.cpp  main.cpp  mesh.cpp  mesh_io.cpp  patch_force.cpp  physical_pressure.cpp  pressure.cpp  pressure_force.cpp  regularization.cpp  regularization_force.cpp  stochastic_force.cpp  stormer_verlet.cpp  stretching_force.cpp  total_force.cpp  trajfile.cpp  tube_force.cpp  velocity_verlet.cpp  vesicle_force.cpp  visualization.cpp
tests/: CMakeLists.txt  frame20.ply  frame9.ply  main.cpp  main_tube.cpp  main_vesicle.cpp  scratch.cpp  scratch_ctl.cpp  scratch_patch.cpp  visualization.cpp
tests/python/: MainTest.py
tests/python/pytest/: MainTest.py  test.ply  test_core.py
tests/python/sample_meshes/: boundarySpine.ply  patch.ply
tests/python/tutorial/: tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb  tutorial5.ipynb  tutorial6.ipynb  tutorial7.ipynb
tests/python/tutorial/output/tutorial1/biconcave/: out.ply  traj.nc
tests/python/tutorial/output/tutorial1/dumbbell/: out.ply  traj.nc
tests/python/tutorial/output/tutorial1/star/: out.ply  traj.nc
tests/python/tutorial/output/tutorial2/ico_mut/: out.ply  traj.nc
tests/python/tutorial/output/tutorial2/ico_reg/: out.ply  traj.nc
tests/python/tutorial/output/tutorial2/ico_shift/: out.ply  traj.nc
tests/python/tutorial/output/tutorial3/fixed/: out.ply  traj.nc
tests/python/tutorial/output/tutorial3/mask/: out.ply  traj.nc
tests/python/tutorial/output/tutorial3/pin/: out.ply  traj.nc
tests/python/tutorial/output/tutorial3/roller/: out.ply  traj.nc
tests/python/tutorial/output/tutorial4/: out.ply
tests/python/tutorial/output/tutorial5/Kb/traj/: out.ply  traj.nc
tests/python/tutorial/output/tutorial5/eta/traj/: out.ply  traj.nc
tests/python/tutorial/output/tutorial6/traj/: out.ply  traj.nc
tests/python/tutorial/output/tutorial7/: traj.nc
tests/python/tutorial/sample_meshes/: oblate.ply
tests/src/: dotproduct_test.cpp  force_calculation_test.cpp  force_test.cpp  integrator_test.cpp  main_test.cpp  mapping_test.cpp  mutable_trajfile_test.cpp  product_test.cpp
(+3079 files in other folders)
