[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths=["tests"]
filterwarnings = [
    "error",
    # Produced by seaborn
    "ignore: distutils Version classes are deprecated. Use packaging.version instead.",
]

[tool.codespell]
skip = '*.ply,*.nc'
quiet-level = 3
ignore-words-list = "isplay,previouse,protol"
