[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools_scm"]
build-backend = "scikit_build_core.build"


[project]
name = "pymem3dg"
authors = [
    { name = "Cuncheng Zhu", email = "cuzhu@ucsd.edu" },
    { name = "Christopher T. Lee", email = "ctlee@ucsd.edu" },
]
description = "PyMem3DG: Membrane Dynamics in 3D using Discrete Differential Geometry"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "meshing",
    "membrane mechanics",
    "discrete differential geometry",
    "Helfrich",
]
license = { text = "Mozilla Public License 2.0 (MPL 2.0)" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "scipy",
    "netCDF4",
    "polyscope",
    "matplotlib",
    "seaborn",
    "xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "docutils",
    "jupyter_sphinx",
    "markupsafe",
    "nbsphinx",
    "sphinx",
    "sphinx-issues",
    "sphinx_rtd_theme",
    "sphinx-mdinclude"
]
tests = ["pytest"]


[tool.scikit-build]
cmake.args = ["-DBUILD_PYMEM3DG=ON", "-DSUITESPARSE=OFF"]
wheel.packages = ["python_src/pymem3dg"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
install.components = ["PythonModule", "Runtime"]
install.strip = false


[tool.setuptools_scm] # Section required
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # Produced by seaborn
    "ignore: distutils Version classes are deprecated. Use packaging.version instead.",
]


[tool.codespell]
skip = '*.ply,*.nc'
quiet-level = 3
ignore-words-list = "isplay,previouse,protol"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
pymem3dg = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cmake = ">=3.31.2,<4"
matplotlib = ">=3.10.0,<4"
seaborn = ">=0.13.2,<0.14"
xarray = ">=2024.11.0,<2025"
numpy = ">=2.2.0,<3"
scipy = ">=1.14.1,<2"
netcdf-cxx4 = ">=4.3.1,<5"
polyscope = ">=2.3.0,<3"
netcdf4 = ">=1.7.2,<2"

[tool.pixi.feature.docs.dependencies]
jupyter_sphinx = ">=0.5.3,<0.6"
docutils = ">=0.21.2,<0.22"
markupsafe = ">=3.0.2,<4"
nbsphinx = ">=0.9.5,<0.10"
sphinx = ">=8.1.3,<9"
sphinx-issues = ">=5.0.0,<6"
sphinx_rtd_theme = ">=3.0.1,<4"
sphinx-mdinclude = ">=0.6.2,<0.7"

[tool.pixi.feature.tests.dependencies]
pytest = ">=8.3.4,<9"

[tool.pixi.feature.tests.tasks]
test = "pytest"

[tool.pixi.build-dependencies]
cmake = ">=3.25,<3.27"
cxx-compiler = ">=1.8.0,<2"
ninja = ">=1.12.1,<2"
